Fix for background overlay on firefox

--- a/app/assets/stylesheets/store/_layout.scss
+++ b/app/assets/stylesheets/store/_layout.scss
@@ -50,7 +50,6 @@ body {
   color: #fff;
   overflow: hidden;
   font-size: 16px;
-  position: relative;
 }
 
 .page-background {
